<resources>
    <string name="app_name">Trail Camera</string>

    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection time out</string>
    <string name="m6_other_msg">Unknown mistake</string>


    <!--排序开始-->
    <string name="m1_welcom_erperience">Welcome to use Timxon carger super erperience</string>
    <string name="m2_timxon">Timxon APP helps you easily manage and monitor the charger</string>
    <string name="m3_forget_password">Forget password</string>
    <string name="m4_login">Login</string>
    <string name="m5_experience_hall">Experience Hall</string>
    <string name="m6_register">Register</string>
    <string name="m7_username">Username</string>
    <string name="m8_mailbox">Mailbox</string>
    <string name="m9_phone">Phone</string>
    <string name="m10_accept_policy">Accept terms and data privacy policy</string>

    <string name="m11_charge_id">Charge ID:</string>
    <string name="m12_loading">加载中...</string>
    <string name="m13_loading_error_please_click_retry">加载失败,请点击重试</string>
    <string name="m14_all_page_loading_finish">已全部加载完成</string>
    <string name="m15_please_select">请选择</string>
    <string name="m16_cancel">取消</string>
    <string name="m17_select_unit">选择单位</string>
    <string name="m18_confirm">确定</string>

</resources>
