<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/m16_cancel"
            android:textColor="@color/color_text_99"
            android:textSize="@dimen/size_content_sp_14" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/m17_select_unit"
            android:textColor="@color/black"
            android:textSize="@dimen/size_title_sp_14"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="56dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/m18_confirm" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_eeeeeee" />

    <NumberPicker
        android:id="@+id/np_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
