<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_5"
        android:textStyle="bold"
        android:text="@string/m3_forget_password"
        android:layout_marginStart="@dimen/dp_20"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_title_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        style="@style/style_til"
        android:layout_marginTop="@dimen/dp_70"
        android:hint="@string/m7_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/dp_15"
            android:singleLine="true"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mailbox"
        style="@style/style_til"
        android:hint="@string/m8_mailbox"
        app:hintTextAppearance="@style/hintAppearence"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_user">

        <EditText
            android:id="@+id/et_mailbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/dp_15"
            android:singleLine="true"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/style_til"
        android:hint="@string/m9_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:hintTextAppearance="@style/hintAppearence"
        app:layout_constraintTop_toBottomOf="@+id/til_mailbox">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:paddingBottom="@dimen/dp_15"
            android:singleLine="true"
            android:textSize="@dimen/size_content_sp_14" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_64"
        android:background="@drawable/selector_button_rect"
        android:minWidth="@dimen/dp_250"
        android:padding="@dimen/dp_5"
        android:text="@string/m4_login"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>