<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/tv_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_5"
        android:text="@string/m3_forget_password"
        android:textColor="@color/color_text_33"
        android:textSize="@dimen/size_title_bar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_head" />


    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:src="@drawable/big_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </ImageView>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/terms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user"
                style="@style/style_til"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/m7_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_registered">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/style_til"
                android:hint="@string/m8_mailbox"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_user">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_reenter_password"
                style="@style/style_til"
                android:hint="@string/m9_phone"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mailbox"
                style="@style/style_til"
                android:hint="@string/m9_phone"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <EditText
                    android:id="@+id/et_mailbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_city"
                style="@style/style_til"
                android:hint="@string/m9_phone"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country"
                style="@style/style_til"
                android:hint="@string/m9_phone"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <EditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_car_model"
                style="@style/style_til"
                android:hint="@string/m9_phone"
                app:hintTextAppearance="@style/hintAppearence"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password">

                <EditText
                    android:id="@+id/et_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:paddingBottom="@dimen/dp_15"
                    android:singleLine="true"
                    android:textSize="@dimen/size_content_sp_14" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:padding="4dp"
            android:src="@drawable/ic_unselect" />

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m10_accept_policy"
            android:textColor="@color/color_text_99"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/selector_button_rect"
        android:minWidth="@dimen/dp_250"
        android:padding="@dimen/dp_5"
        android:text="@string/m4_login"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title_sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>